feat: add social media links to footer for individual task

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,11 @@
     </section>
   </main>
   <footer>
+    <div class="social-icons">
+    <a href="https://facebook.com" target="_blank" rel="noreferrer">Facebook</a>
+    <a href="https://instagram.com" target="_blank" rel="noreferrer">Instagram</a>
+    <a href="https://x.com" target="_blank" rel="noreferrer">X (Twitter)</a>
+  </div>
     &copy;2025 ⛺ SleepOutside ⛺ WDD 330 ⛺ BYU-Idaho for BYU-Pathway
     Worldwide Online
   </footer>
