--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -21,6 +21,7 @@
         src="../images/tents/marmot-ajax-tent-3-person-3-season-in-pale-pumpkin-terracotta~p~880rr_01~320.jpg"
         alt="Marmot Ajax tent" />
       <p class="product-card__price">$199.99</p>
+      <p class="product-card__discount">20% OFF</p>
       <p class="product__color">Pale Pumpkin/Terracotta</p>
       <p class="product__description">
         Get out and enjoy nature with Marmot&#39;s Ajax tent, featuring a
@@ -40,6 +41,7 @@
         src="../images/tents/cedar-ridge-rimrock-tent-2-person-3-season-in-rust-clay~p~344yj_01~320.jpg"
         alt="Rimrock Tent - 2-Person, 3-Season" />
       <p class="product-card__price">$69.99</p>
+      <p class="product-card__discount">10% OFF</p>
       <p class="product__color">Rust/Clay</p>
       <p class="product__description">
         Lightweight and ready for adventure, this Cedar Ridge Rimrock tent
