--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sleep Outside | Cart</title>
-  <link rel="stylesheet" href="/css/style.css" />
-  <script src="../js/cart.js" type="module"></script>
+  <link rel="stylesheet" href="/public/css/style.css" />
+  <script src="/src/js/cart.js" type="module"></script>
 </head>
 
 <body>
