feat: integration of product API and dynamic category routing.
- Updated ProductData.mjs to fetch data from the external API using VITE_SERVER_URL.
- Modified ProductList.mjs to handle dynamic categories via URL parameters.
- Fixed product detail page to query the API directly by product ID.
- Updated product templates to use new API image structure (PrimaryMedium/PrimaryLarge).
- Refactored home page (index.html) paths to fix broken CSS and image assets.
- Added dynamic page titles that update based on the selected category.
- Cleaned up product-listing logic to ensure a flexible and scalable data source.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sleep Outside | Home</title>
+
   <link rel="stylesheet" href="/css/style.css" />
+
   <script src="/src/js/main.js" type="module"></script>
 </head>
 
@@ -28,9 +30,33 @@
       </div>
     </div>
 
-    <section class="products">
-      <h2>Top Products</h2>
-      <ul class="product-list"></ul>
+    <section class="category-list">
+      <ul class="category-grid">
+        <li class="category-card">
+          <a href="/src/product_listing/index.html?category=tents">
+            <img src="/images/tents/category-tents.svg" alt="Tents" />
+            <p>Tents</p>
+          </a>
+        </li>
+        <li class="category-card">
+          <a href="/src/product_listing/index.html?category=backpacks">
+            <img src="/images/tents/category-backpacks.svg" alt="Backpacks" />
+            <p>Backpacks</p>
+          </a>
+        </li>
+        <li class="category-card">
+          <a href="/src/product_listing/index.html?category=sleeping-bags">
+            <img src="/images/tents/category-sleepingbags.svg" alt="Sleeping Bags" />
+            <p>Sleeping Bags</p>
+          </a>
+        </li>
+        <li class="category-card">
+          <a href="/src/product_listing/index.html?category=hammocks">
+            <img src="/images/tents/category-hammocks.svg" alt="Hammocks" />
+            <p>Hammocks</p>
+          </a>
+        </li>
+      </ul>
     </section>
   </main>
 
@@ -38,3 +64,4 @@
 </body>
 
 </html>
+```
