--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sleep Outside | Cart</title>
+  <title>Sleep Outside | Product Listing</title>
   <link rel="stylesheet" href="/css/style.css" />
-  <script src="../js/cart.js" type="module"></script>
+  <script src="/src/js/product-listing.js" type="module"></script>
 </head>
 
 <body>
@@ -14,14 +14,10 @@
 
   <main class="divider">
     <section class="products">
-      <h2>My Cart</h2>
-      <ul class="product-list" id="cart-list">
+      <h2 id="category-title">Top Products</h2>
+      <ul class="product-list">
       </ul>
     </section>
-
-    <div class="cart-footer hide">
-      <p class="cart-total">Total: $0</p>
-    </div>
   </main>
 
   <footer id="main-footer"></footer>
