--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sleep Outside | Product Details</title>
   <link rel="stylesheet" href="/css/style.css" />
-  <script src="/src/js/product.js" type="module"></script>
+  <script src="/src/js/product-details.js" type="module"></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
       <p class="product-card__price" id="productFinalPrice"></p>
       <p class="product__color" id="productColorName"></p>
 
-      <p class="product__description" id="productDescriptionHtmlSimple"></p>
+      <div class="product__description" id="productDescriptionHtmlSimple"></div>
 
       <div class="product-detail__add">
         <button id="addToCart" data-id="">Add to Cart</button>
