--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -1,25 +1,64 @@
 <!doctype html>
-
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sleep Outside | Checkout</title>
+  <link rel="stylesheet" href="../../public/css/style.css" />
+  <link rel="stylesheet" href="../../public/css/checkout.css" />
+</head>
 
-    <title>Sleep Outside | Checkout</title>
+<body>
+  <header class="divider" id="main-header"></header>
 
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
+  <main class="divider">
+    <section class="checkout-form">
+      <h2>Review & Place your Order</h2>
+      <form id="checkout-form" name="checkout-form">
+        <fieldset>
+          <legend>Shipping Address</legend>
+          <label for="fname">First Name</label>
+          <input type="text" name="fname" id="fname" required />
 
-  <body>
-    <header class="divider" id="main-header"> </header>
+          <label for="lname">Last Name</label>
+          <input type="text" name="lname" id="lname" required />
 
-    <main class="divider">
-      <section class="products">
-        <h2>Review & Place your Order</h2>
-      </section>
-    </main>
+          <label for="street">Street</label>
+          <input type="text" name="street" id="street" required />
 
-    <footer id="main-footer"></footer>
-  </body>
+          <label for="city">City</label>
+          <input type="text" name="city" id="city" required />
+
+          <label for="state">State</label>
+          <input type="text" name="state" id="state" required />
+
+          <label for="zip">Zip Code</label>
+          <input type="text" name="zip" id="zip" required />
+        </fieldset>
+
+        <fieldset>
+          <legend>Payment</legend>
+          <label for="cardNumber">Card Number</label>
+          <input type="text" name="cardNumber" id="cardNumber" required />
+
+          <label for="expiration">Expiration Date</label>
+          <input type="text" name="expiration" id="expiration" placeholder="MM/YY" required />
+
+          <label for="code">Security Code</label>
+          <input type="text" name="code" id="code" required />
+        </fieldset>
+
+        <div id="checkout-summary">
+        </div>
+
+        <button type="submit" id="checkoutSubmit">Checkout</button>
+      </form>
+    </section>
+  </main>
+
+  <footer id="main-footer"></footer>
+  <script src="../js/checkout.js" type="module"></script>
+</body>
+
 </html>
